add_subdirectory( heat-equation )

# TODO CMAKE: get it back
#add_subdirectory( transport-equation )
#add_subdirectory( navier-stokes )
#add_subdirectory( inviscid-flow )

#add_subdirectory( mean-curvature-flow )
#add_subdirectory( hamilton-jacobi )
#add_subdirectory( hamilton-jacobi-parallel )
#add_subdirectory( fast-sweeping )
#add_subdirectory( hamilton-jacobi-parallel-map )
#add_subdirectory( fast-sweeping-map )
#add_subdirectory( narrow-band )


#add_subdirectory( mean-curvature-flow )

