if( WITH_PYTHON STREQUAL "yes" )
   ADD_SUBDIRECTORY( Python )
endif( WITH_PYTHON STREQUAL "yes" )

ADD_SUBDIRECTORY( TNL )

if( WITH_TOOLS STREQUAL "yes" )
   ADD_SUBDIRECTORY( Tools )
endif( WITH_TOOLS STREQUAL "yes" )

if( WITH_TESTS STREQUAL "yes" )
   ADD_SUBDIRECTORY( UnitTests )
endif( WITH_TESTS STREQUAL "yes" )
